Updated group handlers
